<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">


    <Button
        android:id="@+id/feature_choice_1"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="277dp"
        android:layout_height="56dp"
        android:background="@drawable/btn_shape_round"
        android:onClick="toAddPolishActivity"
        android:text="@string/feature_choice_1"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/feature_choice_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.702" />

    <Button
        android:id="@+id/feature_choice_2"
        android:layout_width="277dp"
        android:layout_height="56dp"
        android:background="@drawable/btn_shape_round"
        android:onClick="toDeletePolishActivity"
        android:text="@string/feature_choice_2"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.647" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="321dp"
        android:layout_height="46dp"
        android:layout_marginTop="116dp"
        android:layout_marginBottom="59dp"
        android:text="@string/features_choice"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/feature_choice_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>